tests/yuan/lexer/errors/unterminated_comments.yu
// Yuan 词法分析错误测试 - 未终止的注释
// 测试未终止块注释的错误处理

// 正常的代码
var normal_code = 42

// 未终止的块注释 - 这个注释永远不会结束
/* 这是一个未终止的块注释
   包含各种内容：
   - 变量声明语法
   - 函数定义语法
   - 字符串字面量
   - 其他注释语法
   
   var code_in_comment = "这些代码被注释掉了"
   func function_in_comment() {
       return 42
   }
   
   // 单行注释在块注释中
   /// 文档注释在块注释中
   
   这个块注释一直到文件结尾都没有结束标记